# hecs

./: .gitignore  HECFS.cabal  HECS.cabal
src/: HECFS.hs  HECS.hs  HECSUtil.hs  Main.hs  conf.json
src/HECS/: Internal.hs
