cabal-version: >= 1.2.3
name: HECS
synopsis: Erasure-coded Storage using HFuse
description: Erasure-coded Storage using HFuse
author: Boncheol Gu
maintainer: boncheol.gu@gmail.com
license: BSD3
license-file: LICENSE
version: 0.1
build-type:Simple
category: Filesystem
executable hecs
  main-is:             
    HECS.hs
  -- other-modules:       
  build-depends:
    base >= 3 && < 5
    , fec >= 0.1
    , bytestring
    , haskeline
    , json
    , Crypto
    , unix
    , HFuse
    , directory
    , vector
    , io-streams
  ghc-options:
    -Wall
  hs-source-dirs:
    src
executable hecsutil
  main-is:             
    HECSUtil.hs
  -- other-modules:       
  build-depends:
    base >= 3 && < 5
    , fec >= 0.1
    , bytestring
    , haskeline
    , json
    , Crypto
    , unix
    , HFuse
    , directory
    , vector
    , io-streams
  ghc-options:
    -Wall
  hs-source-dirs:
    src
