cabal-version: >= 1.2.3
name: HECS
synopsis: Erasure-coded Storage using HFuse
description: Erasure-coded Storage using HFuse
author: Boncheol Gu
maintainer: boncheol.gu@gmail.com
license: BSD3
license-file: LICENSE
version: 0.1.1
build-type: Simple
category: Filesystem

library
  build-depends:
    base >= 3 && < 5
    , json
    , unix >= 2.0
    , io-streams >= 1.0
    , vector
    , bytestring
    , fec >= 0.1
  extensions:
    DeriveDataTypeable
    , FlexibleInstances
    , NoMonomorphismRestriction
    , ScopedTypeVariables
    , TypeSynonymInstances
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  -- include-dirs:
  --   src/c++
  exposed-modules:
    HECS.Internal

executable hecs
  main-is:             
    HECS.hs
  build-depends:
    base >= 3 && < 5
    , HFuse >= 0.2
    , directory
  ghc-options:
    -Wall
  hs-source-dirs:
    src

executable hecsutil
  main-is:             
    HECSUtil.hs
  build-depends:
    base >= 3 && < 5
  ghc-options:
    -Wall
  hs-source-dirs:
    src
